tests/NormalTests/paczka1/fuzzy1/60107143.err
Error in line 2: aJP S291 73,8
Error in line 1: h3YUU6ScnV S887 90,2
Error in line 14: VYGV7gBFFc S291 38,4
Error in line 16: b7h S887 25,2
Error in line 23: b7h A286 72,6
Error in line 24: aJP S887 63,9
Error in line 29: h3YUU6ScnV A286 35,5
